add some features

--- a/themes/overrides/home.html
+++ b/themes/overrides/home.html
@@ -98,6 +98,7 @@
 <!-- Application footer -->
 {% block footer %}
 <style>
+  
   .footer-home {
     background-color: #263238;
     color: #ffffff;
@@ -142,7 +143,7 @@
     <p>Copyright &copy; 2023 Yozorazaka46</p>
   </div>
   <div class="right-column-home">
-    <p>Reach me on Instagram: @tkrdmz</p>
+    <p>Reach me on Instagram: <a href=https://instagram.com/yozorazaka46>@yozorazaka46</a></p>
   </div>
 </div>
 {% endblock %}
