change website structure

--- a/themes/overrides/main.html
+++ b/themes/overrides/main.html
@@ -1,5 +1,5 @@
 <!--
-  Copyright (c) 2016-2023 Martin Donath <martin.donath@squidfunk.com>
+  Copyright (c) 2024 Dhika Mahendra Sudrajat <dhikamahendra789@gmail.com>
 
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to
@@ -34,19 +34,17 @@
 
 <!-- Announcement bar -->
 {% block announce %}
-  Welcome to<strong>Yozorazaka46!</strong> found me on
+  Welcome to<strong> Yozorazaka46!</strong> found me on
   <a rel="me" href="https://instagram.com/yozorazaka46">
     <span class="twemoji mastodon">
       {% include ".icons/fontawesome/brands/instagram.svg" %}
     </span>
-    <strong>Instagram</strong>
   </a>
   and
   <a href="https://twitter.com/yzrzk46">
     <span class="twemoji twitter">
       {% include ".icons/fontawesome/brands/x-twitter.svg" %}
     </span>
-    <strong>X</strong>
   </a>
 {% endblock %}
 
