--- a/themes/overrides/home.html
+++ b/themes/overrides/home.html
@@ -1,5 +1,5 @@
 <!--
-  Copyright (c) 2016-2023 Martin Donath <martin.donath@squidfunk.com>
+  Copyright (c) 2024 Dhika Mahendra Sudrajat <dhikamahendra789@gmail.com>
 
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to
