--- a/themes/overrides/main.html
+++ b/themes/overrides/main.html
@@ -28,7 +28,7 @@
   <!-- Extra style sheets (can't be set in mkdocs.yml due to content hash) -->
   <link
     rel="stylesheet"
-    href="{{ 'assets/stylesheets/custom.css' | url }}"
+    href="{{ base_url }}/assets/stylesheets/custom.css"
   />
 {% endblock %}
 
@@ -53,5 +53,5 @@
   {{ super() }}
 
   <!-- Extra JavaScript (can't be set in mkdocs.yml due to content hash) -->
-  <script src="{{ 'assets/javascripts/custom.js' | url }}"></script>
+  <script src="{{ base_url }}/assets/javascripts/custom.js"></script>
 {% endblock %}
